adding a swagger
